# rules_clojure

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  repositories.bzl  rules.bzl  run_all_tests.sh  toolchains.bzl
examples/setup/default/src/: BUILD.bazel
examples/setup/gen_deps/: WORKSPACE  deps.edn
examples/setup/gen_deps/src/: BUILD.bazel
examples/setup/gen_deps/src/example/: BUILD.bazel  name_converter.clj
examples/setup/gen_deps/test/: BUILD.bazel
examples/setup/gen_deps/test/example/: BUILD.bazel  name_converter_test.clj
examples/setup/gen_deps_complex/: BUILD.bazel  WORKSPACE  deps.edn
examples/setup/gen_deps_complex/src/: BUILD.bazel
examples/setup/gen_deps_complex/src/example/: BUILD.bazel  app.clj  name_converter.clj
java/: BUILD.bazel
java/rules_clojure/: BUILD.bazel  ClojureWorker.java  DynamicClassLoader.java
rules/: common.bzl  jar.bzl  namespace.bzl  tools_deps.bzl
src/rules_clojure/: BUILD.bazel  compile.clj  fs.clj  gen_build.clj  jar.clj  parse.clj
tests/: BUILD
tests/rules_clojure/: BUILD  app-java-test.clj  app.clj  app_test.clj  library.clj  library_test.clj  unconditionally_failing_test.clj  unconditionally_passing_test.clj
tests/rules_clojure/assert/: test.sh
tests/rules_clojure/protocol/: BUILD.bazel  foo.clj  foo_impl.clj
tests/rules_clojure/transitive/: BUILD  app.clj
tests/rules_clojure/transitive/greeter/: BUILD  HelloJava.java  hello.clj
